# working-alarm

./: CMakeLists.txt  Makefile  README.md  main.cpp  main_windows.cpp  main_windows.h  moc_main_windows.cpp  moc_setting.cpp  moc_window.cpp  qrc_restreminder.cpp  restreminder.pro  restreminder.pro.user.86c2907  restreminder.qrc  setting.cpp  setting.h  setting.json  timesetting.h
